--- a/html/basics.html
+++ b/html/basics.html
@@ -3,6 +3,7 @@
 <title>Basiscs</title>
 </head>
 <body>
+<!-- Das ist ein Kommentar -->
 <h1>Gößte Überschrift</h1>
 <p>Das ist<br>ein Paragraph<br>mit Zeilenumbrüchen.</p>
 <hr>
