--- a/html/link.html
+++ b/html/link.html
@@ -8,7 +8,7 @@
 <a href="https://w33ro0o0.github.io/" target="_self">Öffnen in aktuellem Frame (default)</a><br>
 <a href="https://w33ro0o0.github.io/" target="_parent">Öffnen in übergeornetem Frame</a><br><br>
 <a href="index.html">
-  <img src="html5.gif" alt="HTML5 Projekt">
+  <img src="../images/html5.gif" alt="HTML5 Projekt">
 </a><br><br>
 <a href="#headline">Link zum Überschrift-Bookmark</a><br>
 <a href="index.html#tutorial">Link zum Tutorial-Bookmark dieser Webseite</a>
