--- a/index.html
+++ b/index.html
@@ -1884,7 +1884,7 @@ p {
 </article>
 
 <article>
-<h3 id="css_link"></h3>
+<h3 id="css_link">Links</h3>
 <table>
 <tr>
 <td><iframe src="css/link.html" height="300" width="600"></iframe></td>
